Fix typo (MORTAR -> MORTARS).

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -906,7 +906,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPDAM
 requiredResearch = R-Wpn-Mortar01Lt
-results = "MORTAR:Damage:25", "MORTAR:RadiusDamage:25", "MORTAR:RepeatDamage:25"
+results = "MORTARS:Damage:25", "MORTARS:RadiusDamage:25", "MORTARS:RepeatDamage:25"
 
 [R-Wpn-Mortar-Damage02]
 name = "HE Mortar Shells Mk2"
@@ -917,7 +917,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPDAM
 requiredResearch = R-Wpn-Mortar-Damage01
-results = "MORTAR:Damage:25", "MORTAR:RadiusDamage:25", "MORTAR:RepeatDamage:25"
+results = "MORTARS:Damage:25", "MORTARS:RadiusDamage:25", "MORTARS:RepeatDamage:25"
 
 [R-Wpn-Mortar-Damage03]
 name = "HE Mortar Shells Mk3"
@@ -928,7 +928,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPDAM
 requiredResearch = R-Wpn-Mortar-Damage02
-results = "MORTAR:Damage:25", "MORTAR:RadiusDamage:25", "MORTAR:RepeatDamage:25"
+results = "MORTARS:Damage:25", "MORTARS:RadiusDamage:25", "MORTARS:RepeatDamage:25"
 
 [R-Wpn-Mortar-ROF01]
 name = "Mortar Autoloader"
@@ -939,7 +939,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-Mortar-Damage03
-results = "MORTAR:FirePause:15"
+results = "MORTARS:FirePause:15"
 
 [R-Wpn-Mortar-ROF02]
 name = "Mortar Autoloader Mk2"
@@ -950,7 +950,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-Mortar-ROF01,R-Wpn-Mortar02Hvy
-results = "MORTAR:FirePause:15"
+results = "MORTARS:FirePause:15"
 
 [R-Wpn-Mortar-ROF03]
 name = "Mortar Autoloader Mk3"
@@ -961,7 +961,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar2Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-Mortar-ROF02
-results = "MORTAR:FirePause:15"
+results = "MORTARS:FirePause:15"
 
 [R-Comp-CommandTurret01]
 name = "Command Turret"
@@ -3151,7 +3151,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPDAM
 requiredResearch = R-Wpn-Mortar02Hvy,R-Wpn-Mortar-Damage03
-results = "MORTAR:Damage:25", "MORTAR:RadiusDamage:25", "MORTAR:RepeatDamage:25"
+results = "MORTARS:Damage:25", "MORTARS:RadiusDamage:25", "MORTARS:RepeatDamage:25"
 
 [R-Wpn-Mortar-Damage05]
 name = "HEAP Mortar Shells Mk2"
@@ -3162,7 +3162,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPDAM
 requiredResearch = R-Wpn-Mortar-Damage04
-results = "MORTAR:Damage:25", "MORTAR:RadiusDamage:25", "MORTAR:RepeatDamage:25"
+results = "MORTARS:Damage:25", "MORTARS:RadiusDamage:25", "MORTARS:RepeatDamage:25"
 
 [R-Wpn-Mortar-Damage06]
 name = "HEAP Mortar Shells Mk3"
@@ -3173,7 +3173,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar2Mk1
 subgroupIconID = IMAGE_RES_GRPDAM
 requiredResearch = R-Wpn-Mortar-Damage05
-results = "MORTAR:Damage:25", "MORTAR:RadiusDamage:25", "MORTAR:RepeatDamage:25"
+results = "MORTARS:Damage:25", "MORTARS:RadiusDamage:25", "MORTARS:RepeatDamage:25"
 
 [R-Wpn-Rail-Accuracy01]
 name = "Rail Target Prediction Computer"
@@ -3448,7 +3448,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar2Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-Mortar-ROF03,R-Wpn-Cannon-ROF03
-results = "MORTAR:FirePause:15"
+results = "MORTARS:FirePause:15"
 
 [R-Cyborg-Hvywpn-HPV]
 name = "Super HPV Cyborg"
@@ -3655,7 +3655,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar1Mk1
 subgroupIconID = IMAGE_RES_GRPACC
 requiredResearch = R-Struc-Research-Upgrade02,R-Wpn-Mortar-Damage01
-results = "MORTAR:HitChance:10"
+results = "MORTARS:HitChance:10"
 
 [R-Wpn-Mortar-Acc02]
 name = "Thermal Imaging Mortar Shells"
@@ -3666,7 +3666,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar2Mk1
 subgroupIconID = IMAGE_RES_GRPACC
 requiredResearch = R-Wpn-Mortar-Acc01,R-Struc-Research-Upgrade04
-results = "MORTAR:HitChance:10"
+results = "MORTARS:HitChance:10"
 
 [R-Wpn-Mortar-Acc03]
 name = "Target Acquisition Mortar Shells"
@@ -3678,7 +3678,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Mortar2Mk1
 subgroupIconID = IMAGE_RES_GRPACC
 requiredResearch = R-Struc-Research-Upgrade08,R-Wpn-Mortar-Acc02
-results = "MORTAR:HitChance:10"
+results = "MORTARS:HitChance:10"
 
 [R-Wpn-Howitzer-ROF01]
 name = "Howitzer Autoloader"
@@ -3689,7 +3689,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Howitzer105Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-HvyHowitzer
-results = "MORTAR:FirePause:10"
+results = "MORTARS:FirePause:10"
 
 [R-Wpn-Howitzer-ROF02]
 name = "Howitzer Autoloader Mk2"
@@ -3700,7 +3700,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Howitzer105Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-Howitzer-ROF01
-results = "MORTAR:FirePause:10"
+results = "MORTARS:FirePause:10"
 
 [R-Wpn-Howitzer-ROF03]
 name = "Howitzer Autoloader Mk3"
@@ -3711,7 +3711,7 @@ iconID = IMAGE_RES_WEAPONTECH
 statID = Howitzer105Mk1
 subgroupIconID = IMAGE_RES_GRPROF
 requiredResearch = R-Wpn-Howitzer-ROF02
-results = "MORTAR:FirePause:10"
+results = "MORTARS:FirePause:10"
 
 [R-Wpn-Howitzer-ROF04]
 name = "Howitzer Fast Loader"
