Fix copy/paste error found by forum user Duha.

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -4444,4 +4444,4 @@ iconID = IMAGE_RES_SYSTEMTECH
 imdName = gnmecm1.pie
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-ECM-Upgrade01,R-Sys-Sensor-Upgrade03
-result = "ECM:Range:15"
+results = "ECM:Range:15"
