Upgrades: Add back functionality whereby resistance circuit research would give droids increased resistance as well.

--- a/data/mp/stats/research.ini
+++ b/data/mp/stats/research.ini
@@ -3881,7 +3881,7 @@ iconID = IMAGE_RES_COMPUTERTECH
 imdName = ICCCCONS.PIE
 subgroupIconID = IMAGE_RES_GRPUPG
 requiredResearch = R-Sys-Engineering03,R-Struc-Research-Upgrade08,R-Sys-Sensor-WSTower
-results = "Structure:Resistance:300"
+results = "Structure:Resistance:300", "Droids:Resistance:300"
 
 [R-Wpn-Cannon6TwinAslt]
 name = "Twin Assault Cannon"
