Use a better icon model for the helicopter propulsion.

--- a/data/mp/stats/propulsion.ini
+++ b/data/mp/stats/propulsion.ini
@@ -42,7 +42,7 @@ buildPower = 150
 buildPoints = 125
 weight = 50
 hitpoints = 100
-model = DPVTOL.PIE
+model = PRLHELI1.PIE
 type = Lift
 speed = 700
 designable = 1
