--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -290,7 +290,8 @@ COMMONLIBS = \
 	$(top_builddir)/lib/framework/libframework.a \
 	$(top_builddir)/lib/exceptionhandler/libexceptionhandler.a \
 	$(top_builddir)/3rdparty/miniupnpc/libminiupnpc.a \
-	$(top_builddir)/3rdparty/quesoglc/libquesoglc.a
+	$(top_builddir)/3rdparty/quesoglc/libquesoglc.a \
+	$(top_builddir)/3rdparty/freetype-gl/libfreetypegl.a
 
 if PORTABLE
 warzone2100_portable_SOURCES = $(COMMONSOURCES) $(nodist_COMMONSOURCES)
